--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ reqwest = { version = "0.12", features = ["json"] }
 serde_json = "^1"
 tokio = { version = "^1", features = ["full"] }
 structopt = "0.3"
+include-lines = "1.1.2"
+assertions = "0.1"
+rand = "0.9"
